syntax = "proto3";

option go_package = "./;confproto";

package confproto;

service getInfo {
  rpc returnInfo (requestId) returns (replyInfo) {}
}

message requestId {
  uint64 carnet   = 1;
  string nombre   = 2;
  string curso    = 3;
  uint32 nota     = 4;
  string semestre = 5;
  uint32 year     = 6;
}

message replyInfo {
  string info = 1;
}